friend-management/src/main/java/com/example/friendmanagement/error/GetCommonFriendsException.java
package com.example.friendmanagement.error;

public class GetCommonFriendsException extends Exception {

}
